fix(web-components): fixes page header z-index issue
fixes issue with previous changes to z-index of page header

391

--- a/packages/web-components/src/components/ic-page-header/ic-page-header.css
+++ b/packages/web-components/src/components/ic-page-header/ic-page-header.css
@@ -1,18 +1,18 @@
 @import "../../global/normalize.css";
 
 /**
- * @prop --ic-z-index-page-header: z-index of page-header in sticky mode
+ * @prop --ic-z-index-page-header: z-index of page-header
  */
 
 :host {
   display: block;
+  z-index: var(--ic-z-index-page-header);
 }
 
 :host(.sticky) {
   position: sticky;
   top: 0;
   box-shadow: var(--ic-elevation-overlay);
-  z-index: var(--ic-z-index-page-header);
 }
 
 header {
